--- a/docs/features/anomaly-detection/metrics.mdx
+++ b/docs/features/anomaly-detection/metrics.mdx
@@ -37,8 +37,8 @@ No mandatory configuration, however it is highly recommended to configure a `tim
       &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/column-anomalies"><font color="#CD7D55">metrics: monitors list</font></a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#CD7D55">name: string</font>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/column-anomalies"><font color="#CD7D55">type: monitor type</font></a>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/where-expression"><font color="#CD7D55">where_expression: sql expression</font></a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#CD7D55">columns: list</font>
+      &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/where-expression"><font color="#CD7D55">where_expression: sql expression</font></a>
  </code>
 </pre>
 
