fix yaml format

--- a/docs/features/anomaly-detection/metrics.mdx
+++ b/docs/features/anomaly-detection/metrics.mdx
@@ -87,7 +87,7 @@ models:
           - name: null_count
             type: null_count
             columns: [hello, world]
-        where_expression: country = 'USA'
+        where_expression: "country = 'USA'"
         cloud_monitored=True
 
 ```
