added azure devops card

--- a/docs/_snippets/cloud/integrations/cards-groups/code-repo-cards.mdx
+++ b/docs/_snippets/cloud/integrations/cards-groups/code-repo-cards.mdx
@@ -87,6 +87,16 @@
     }
   ></Card>
   <Card
+    title="Azure DevOps"
+    href="/cloud/integrations/code-repo/azure-devops"
+    icon={
+        <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#0078D7" width="45" height="40">
+  <title>Azure DevOps</title>
+  <path d="M22.59 7.05L18.69 3.6A3.324 3.324 0 0016.87 3h-4.68L8.7.7c-.9-.92-2.5-.92-3.4 0L.64 5.47A1.32 1.32 0 000 6.4v8.7c0 .37.15.72.4.99l3.89 3.46c.53.49 1.22.74 1.91.74h4.73L15.2 24c.86.88 2.5.88 3.36 0l3.93-4.66c.25-.27.4-.62.4-.99V8c0-.4-.17-.76-.4-1.04zM8.17 8.36l3.89 1.94-2.43 2.57H5.74zM4.69 16.8l-1.67-1.62V7.95L4.7 6.2v10.6zm13.46-1.9L12 18.27v-3.2l4.1-4.34h3.84v4.17z"/>
+</svg>
+    }
+  ></Card>
+  <Card
     title="Ask us"
     href="https://t2taztilhde.typeform.com/to/mdJoO9lA"
     icon="plus"
