--- a/docs/cloud/integrations/code-repo/azure-devops.mdx
+++ b/docs/cloud/integrations/code-repo/azure-devops.mdx
@@ -1,3 +1,8 @@
+---
+title: "Azure DevOps"
+sidebarTitle: "Code integration"
+---
+
 # Azure DevOps Integration
 
 Elementary can integrate with Azure DevOps to connect to the code repository where your **dbt project code** is managed, and it opens pull requests with configuration changes.
