--- a/docs/_snippets/cloud/integrations/cards-groups/code-repo-cards.mdx
+++ b/docs/_snippets/cloud/integrations/cards-groups/code-repo-cards.mdx
@@ -90,10 +90,7 @@
     title="Azure DevOps"
     href="/cloud/integrations/code-repo/azure-devops"
     icon={
-        <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#0078D7" width="45" height="40">
-  <title>Azure DevOps</title>
-  <path d="M22.59 7.05L18.69 3.6A3.324 3.324 0 0016.87 3h-4.68L8.7.7c-.9-.92-2.5-.92-3.4 0L.64 5.47A1.32 1.32 0 000 6.4v8.7c0 .37.15.72.4.99l3.89 3.46c.53.49 1.22.74 1.91.74h4.73L15.2 24c.86.88 2.5.88 3.36 0l3.93-4.66c.25-.27.4-.62.4-.99V8c0-.4-.17-.76-.4-1.04zM8.17 8.36l3.89 1.94-2.43 2.57H5.74zM4.69 16.8l-1.67-1.62V7.95L4.7 6.2v10.6zm13.46-1.9L12 18.27v-3.2l4.1-4.34h3.84v4.17z"/>
-</svg>
+      <svg width="800px" height="800px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none"><path fill="url(#azure-devops-color-16__paint0_linear_707_116)" d="M15 3.622v8.512L11.5 15l-5.425-1.975v1.958L3.004 10.97l8.951.7V4.005L15 3.622zm-2.984.428L6.994 1v2.001L2.382 4.356 1 6.13v4.029l1.978.873V5.869l9.038-1.818z"/><defs><linearGradient id="azure-devops-color-16__paint0_linear_707_116" x1="8" x2="8" y1="14.956" y2="1.026" gradientUnits="userSpaceOnUse"><stop stop-color="#0078D4"/><stop offset=".16" stop-color="#1380DA"/><stop offset=".53" stop-color="#3C91E5"/><stop offset=".82" stop-color="#559CEC"/><stop offset="1" stop-color="#5EA0EF"/></linearGradient></defs></svg>
     }
   ></Card>
   <Card
