changed SVG icon

--- a/docs/_snippets/cloud/integrations/cards-groups/code-repo-cards.mdx
+++ b/docs/_snippets/cloud/integrations/cards-groups/code-repo-cards.mdx
@@ -90,7 +90,18 @@
     title="Azure DevOps"
     href="/cloud/integrations/code-repo/azure-devops"
     icon={
-      <svg width="800px" height="800px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none"><path fill="url(#azure-devops-color-16__paint0_linear_707_116)" d="M15 3.622v8.512L11.5 15l-5.425-1.975v1.958L3.004 10.97l8.951.7V4.005L15 3.622zm-2.984.428L6.994 1v2.001L2.382 4.356 1 6.13v4.029l1.978.873V5.869l9.038-1.818z"/><defs><linearGradient id="azure-devops-color-16__paint0_linear_707_116" x1="8" x2="8" y1="14.956" y2="1.026" gradientUnits="userSpaceOnUse"><stop stop-color="#0078D4"/><stop offset=".16" stop-color="#1380DA"/><stop offset=".53" stop-color="#3C91E5"/><stop offset=".82" stop-color="#559CEC"/><stop offset="1" stop-color="#5EA0EF"/></linearGradient></defs></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+        <defs>
+            <linearGradient id="a" gradientUnits="userSpaceOnUse" x1="9" y1="16.97" x2="9" y2="1.03" gradientTransform="scale(7.11111)">
+                <stop offset="0" stop-color="#0078d4"/>
+                <stop offset=".16" stop-color="#1380da"/>
+                <stop offset=".53" stop-color="#3c91e5"/>
+                <stop offset=".82" stop-color="#559cec"/>
+                <stop offset="1" stop-color="#5ea0ef"/>
+            </linearGradient>
+        </defs>
+        <path fill="url(#a)" d="M120.89 28.445v69.262l-28.445 23.324-44.09-16.07v15.93L23.395 88.25l72.746 5.688V31.574ZM96.64 31.93 55.82 7.11v16.285L18.348 34.418 7.109 48.852v32.785l16.075 7.11V46.718Zm0 0"/>
+    </svg>
     }
   ></Card>
   <Card
