--- a/docs/cloud/integrations/code-repo/azure-devops.mdx
+++ b/docs/cloud/integrations/code-repo/azure-devops.mdx
@@ -1,9 +1,7 @@
 ---
-title: "Azure DevOps"
+title: "Azure DevOps Integration"
 sidebarTitle: "Azure DevOps"
 ---
-
-# Azure DevOps Integration
 
 Elementary can integrate with Azure DevOps to connect to the code repository where your **dbt project code** is managed, and it opens pull requests with configuration changes.
 
