added Oauth explanation

--- a/docs/cloud/integrations/code-repo/azure-devops.mdx
+++ b/docs/cloud/integrations/code-repo/azure-devops.mdx
@@ -9,7 +9,8 @@ Elementary can integrate with Azure DevOps to connect to the code repository whe
 
 1. Navigate to **Settings > Code repository** in Elementary Cloud.  
 2. Click on **Connect** and select **Azure DevOps**.  
-3. Enter your Azure DevOps organization URL (e.g., `https://dev.azure.com/your-organization`).  
+3. Enter your Azure DevOps organization URL \
+(e.g., `https://dev.azure.com/your-organization`).  
 4. Click **Save**.  
 5. Step 5 involves OAuth authentication, a protocol used to authenticate between the customer's service (Azure DevOps) and Elementary Cloud. During this process, a temporary token is issued, which can be used to make API calls. Along with the temporary token, a refresh token is also provided. The refresh token is used when the customer's service (Azure DevOps) indicates that the temporary token has expired. For Microsoft services, OAuth is managed by Microsoft Entra ID (formerly known as Active Directory).
 
