added Oauth explanation

--- a/docs/cloud/integrations/code-repo/azure-devops.mdx
+++ b/docs/cloud/integrations/code-repo/azure-devops.mdx
@@ -12,7 +12,7 @@ Elementary can integrate with Azure DevOps to connect to the code repository whe
 3. Enter your Azure DevOps organization URL \
 (e.g., `https://dev.azure.com/your-organization`).  
 4. Click **Save**.  
-5. Connect through OAuth authentication to authenticate between Azure DevOps and Elementary Cloud. During this process, a temporary token is issued, which can be used to make API calls. Along with the temporary token, a refresh token is also provided. The refresh token is used when Azure DevOps indicates that the temporary token has expired. For Microsoft services, OAuth is managed by Microsoft Entra ID (formerly known as Active Directory).
+5. Connect through OAuth to authenticate between Azure DevOps and Elementary Cloud. During this process, a temporary token is issued, which can be used to make API calls. Along with the temporary token, a refresh token is also provided. The refresh token is used when Azure DevOps indicates that the temporary token has expired. For Microsoft services, OAuth is managed by Microsoft Entra ID (formerly known as Active Directory).
 
 ---
 
