replaced local images with Cloudinary links

--- a/docs/best-practices/detection-and-coverage.mdx
+++ b/docs/best-practices/detection-and-coverage.mdx
@@ -128,7 +128,7 @@ We highly recommend going to the relevant quality dimension, then filtering by a
 
 Example -
 
-![Data health dashboard](/pics/data-health-dashboard.webp)
+![Data health dashboard](https://res.cloudinary.com/diuctyblm/image/upload/v1738149955/Docs/data-health-dashboard_czfhhp.webp)
 
 In this example, you can see that accuracy tests are missing for our sales domain. This means we don't know if the data in our public-facing "sales" tables adheres to our business constraints. For example, if we have an e-commerce shop where no product has a price below $100 or above $1000, we can easily add a test to validate this. Implementing validations for the main constraints in this domain will allow us to get a quality score for the accuracy level of our data.
 
