made links on this page relative

--- a/docs/guides/modules-overview/dbt-package.mdx
+++ b/docs/guides/modules-overview/dbt-package.mdx
@@ -40,10 +40,10 @@ The repository and source code of the Elementary dbt package can be [**found he
 
 After you deploy the dbt package, you can use Elementary tests, and your dbt artifacts will be uploaded automatically with on-run-end hooks:
 
-<CardGroup cols={1}>
-  <Card title="Elementary data tests" href="https://docs.elementary-data.com/features/data-tests" />
-  <Card title="dbt artifacts" href="https://docs.elementary-data.com/dbt/dbt-artifacts" />
-  <Card title="on-run-end hooks" href="https://docs.elementary-data.com/dbt/on-run-end_hooks" />
+<CardGroup cols={3}>
+  <Card title="Elementary data tests" href="/features/data-tests" />
+  <Card title="dbt artifacts" href="/dbt/dbt-artifacts" />
+  <Card title="on-run-end hooks" href="/dbt/on-run-end_hooks" />
 </CardGroup>
 
 ---
