Editing visual changes cloud-vs-oss

--- a/docs/overview/cloud-vs-oss.mdx
+++ b/docs/overview/cloud-vs-oss.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Elementary: Community vs. Cloud"
+title: "Elementary OSS vs. Elementary Cloud"
 sidebarTitle: "Cloud vs OSS"
 description: "Detailed comparison of Elementary product offerings."
 icon: "list-check"
@@ -50,4 +50,4 @@ Below is a detailed comparison between the OSS and Cloud features:
 
 <Card title="Book a call with our team" href="https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs" />
 
-<Card title="Get started with a free trial" href="https://app.elementary-data.com/" />
+<Card title="Get started with a free Cloud trial" href="https://app.elementary-data.com/" />
