Editing visual changes cloud-vs-oss

--- a/docs/overview/cloud-vs-oss.mdx
+++ b/docs/overview/cloud-vs-oss.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Elementary OSS vs. Elementary Cloud"
-og:title: "Elementary OSS vs. Elementary Cloud"
+'og:title': "Elementary OSS vs. Elementary Cloud"
 sidebarTitle: "Cloud vs OSS"
 description: "Detailed comparison of Elementary product offerings."
 icon: "list-check"
