Change OSS paragraph

--- a/docs/overview/cloud-vs-oss.mdx
+++ b/docs/overview/cloud-vs-oss.mdx
@@ -9,7 +9,9 @@ icon: "list-check"
 
 If you’re just beginning your data quality journey, the decision between OSS and Cloud depends on your goals and team setup:
 
-- **Start with OSS** if you have 1-2 users focused primarily on detection and the capability to manage an open-source solution. OSS integrates seamlessly into dbt workflows but requires dedicated resources for setup and ongoing maintenance. It’s best suited for small teams of data and/or analytics engineers looking to add basic detection to their dbt project.
+- **Start with OSS**  if you have a small data team focused primarily on detection. The OSS package integrates seamlessly into dbt workflows but operates as a local solution, requiring dedicated resources for setup and ongoing maintenance. It’s ideal for small teams of data and/or analytics engineers seeking a straightforward, non-collaborative setup.
+
+
   
 - **Choose Cloud** if you’re looking to set up a scalable, collaborative data quality program. The Elementary Cloud Platform integrates into dbt workflows, providing a developer-centric tool for engineers to maintain and govern data quality rules while also offering a cloud-based interface for business users and data stewards. This enables engineers to proactively identify and resolve data issues while consumers can monitor data health, receive notifications, view health scores, and add their own validations in a user-friendly environment. It offers advanced features like automated freshness and volume monitoring, ML-powered anomaly detection, a simple data catalog,  and rich integrations.
 
