adding troubleshooting guide - fix 2

--- a/docs/data-tests/anomaly-detection-tests/anomaly-test-troubleshooting.mdx
+++ b/docs/data-tests/anomaly-detection-tests/anomaly-test-troubleshooting.mdx
@@ -15,7 +15,7 @@ tests:
       timestamp_column: created_at# If this exists, you have a timestamp-based test
 ```
 
-<Accordion title="If you have a timestamp-based test (recommended">
+<Accordion title="If you have a timestamp-based test (recommended)">
 
     - Metrics are calculated by grouping data into time buckets (default: 'day')
     - Detection period (default: 2 days) determines how many buckets are being tested
