--- a/docs/oss/guides/alerts/send-teams-alerts.mdx
+++ b/docs/oss/guides/alerts/send-teams-alerts.mdx
@@ -9,6 +9,8 @@ title: "Setup Teams alerts"
 Before you can start using the alerts, make sure to [install the dbt package](/oss/quickstart/quickstart-cli-package), [configure a profile and install the CLI](/oss/quickstart/quickstart-cli).
 This is **required for the alerts to work.**
 
+Elementary sends alerts using Microsoft Teams Adaptive Cards format, which provides rich formatting and interactive capabilities. You can create a webhook URL using either Microsoft Teams Connectors (legacy, being deprecated) or Power Automate Workflows (recommended).
+
 <br />
 </Info>
 
