Implementation of Jinja templated webhook alerts

--- a/docs/oss/guides/alerts/elementary-alerts.mdx
+++ b/docs/oss/guides/alerts/elementary-alerts.mdx
@@ -33,4 +33,16 @@ title: "Elementary alerts"
       src="https://res.cloudinary.com/dvmtceykh/image/upload/v1707817559/m7o762irx6bfc0ts8e0j.png"
     />
   </Card>
+  <Card
+    title="Setup webhook alerts"
+    iconType="solid"
+    href="/oss/guides/alerts/send-webhook-alerts"
+  >
+  <br />
+  <img
+      noZoom
+      width="50"
+      src="https://res.cloudinary.com/dvmtceykh/image/upload/v1707817559/m7o762irx6bfc0ts8e0j.png"
+    />
+  </Card>
 </CardGroup>
