--- a/docs/best-practices/introduction.mdx
+++ b/docs/best-practices/introduction.mdx
@@ -3,13 +3,11 @@ title: "Elementary Best Practices"
 sidebarTitle: "Introduction"
 ---
 
-<Info>
-  The goal of this collection of guides is to help you effectively implement and use Elementary.
-  We'll cover best practices and provide practical tips to enhance your governance, detection,
-  coverage, response and collaboration. Whether you're new to Elementary or looking to optimize your
-  current usage, these guides will help you leverage its full potential to improve your data
-  reliability.
-</Info>
+The goal of this collection of guides is to help you effectively implement and use Elementary. We'll cover best practices and provide practical tips to enhance your governance, detection,
+coverage, response and collaboration. 
+  
+Whether you're new to Elementary or looking to optimize your current usage, these guides will help you leverage its full potential to improve your data
+reliability.
 
 <CardGroup cols={3}>
   <Card
