--- a/docs/best-practices/triage-and-response.mdx
+++ b/docs/best-practices/triage-and-response.mdx
@@ -129,7 +129,7 @@ These are the questions that should be asked, and product tips on how to answer 
 - Does the incident break the pipeline / create delay?
 
   - Is the failure is a model failure, or a freshness issue?
-  - Do we run `dbt build` and this failure stoped the pipeline?
+  - Do we run `dbt build` and this failure stopped the pipeline?
 
     - Check the **Model runs** section of the dashboard to see if there are skipped models, as failures in build cause the downstream models to be skipped.
 
