fix alert rules snippet

--- a/docs/features/alerts-and-incidents/alert-rules.mdx
+++ b/docs/features/alerts-and-incidents/alert-rules.mdx
@@ -2,7 +2,7 @@
 title: "Alert rules"
 ---
 
-<Snippet file="cloud/cloud-feature-tag.mdx" />
+<Snippet file="/_snippets/cloud/cloud-feature-tag.mdx" />
 
 Elementary Cloud allows you to create rules to route your alerts.
 Each rule is a combination of a filter and a destination.
